# load-test

./: .gitignore  Cargo.toml  LICENSE  README.md  urls.txt
scripts/: tokens-requests.rb
src/: fetcher.rs  main.rs  url_receiver.rs
