[package]
name = "load-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-channel = "2.3.1"
clap = { version = "4.5.27", features = ["derive"] }
cookies = "0.0.1"
env_logger = "0.11.6"
futures = "0.3.31"
json = "0.12.4"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["native-tls-vendored"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
statistical = "1.0.0"
tokio = { version = "1.43.0", features = ["full"] }

[profile.release]
debug = 1
